--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,15 @@ jobs:
       run: |
         curl -o adguard-sdnsfilter.txt https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
         curl -o ppfeufer-blocklist.txt https://raw.githubusercontent.com/ppfeufer/adguard-filter-list/master/blocklist
+        curl -o adblock.txt https://raw.githubusercontent.com/jackszb/mullvad/main/adguard/all/adblock.txt
+        curl -o mullvad_adblock.txt https://raw.githubusercontent.com/mullvad/main/adguard/categories/adblock/adblock.txt
 
     - name: Convert adblock rules to binary format
       run: |
         sing-box rule-set convert --type adguard --output rules/adguard-sdnsfilter.srs adguard-sdnsfilter.txt
         sing-box rule-set convert --type adguard --output rules/ppfeufer-blocklist.srs ppfeufer-blocklist.txt
+        sing-box rule-set convert --type adguard --output rules/adblock.srs adblock.txt
+        sing-box rule-set convert --type adguard --output rules/mullvad_adblock.srs mullvad_adblock.txt
 
     - name: Commit & Push SRS files
       run: |
